--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ body {
   margin: 0!important;
   /* display: flex; */
   min-width: 320px;
-  min-height: 100vh;
+  /* min-height: 100vh; */
   /* background: linear-gradient(195deg, rgb(66, 66, 74), rgb(25, 25, 25)); */
   /* color: white; */
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
